refactor(runtime-model): extract profiles model from common to new module (#2640)
- create new module bonita-profile-model
- move profiles model from common to bonita-profile-model
- remove deprecated features "custom pages" and "icon path"

Is part of [DEV-433](https://bonitasoft.atlassian.net/browse/DEV-433)